--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
-echo "# liushaobo.github.io" >> README.md
-git init
-git add README.md
-git commit -m "first commit"
-git remote add origin https://github.com/kinshasa/liushaobo.github.io.git
-git push -u origin master
+<!DOCTYPE html>
+<html>
+<body>
+<h1>Hello World</h1>
+<p>I'm hosted with GitHub Pages.</p>
+</body>
+</html>
